kubernetes/users-api/users-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-api-deployment
spec:
  replicas: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: users-api
      type: auto
  template:
    metadata:
      labels:
        app: users-api
        type: auto
    spec:
      containers:
      - name: users-api
        imagePullPolicy: Always
        image: 
        ports:
        - containerPort: 8000
        readinessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 5
      volumes:
      - name: secrets
        secret:
          secretName: cloud-sql-proxy-secrets
